Fix overflow bug trom the tooltip in a certain language

--- a/src/app/pages/home-page/bio/bio.component.scss
+++ b/src/app/pages/home-page/bio/bio.component.scss
@@ -82,7 +82,8 @@
     > div {
         visibility: hidden;
         position: absolute;
-        width: max-content;
+        @include pc { width: max-content; }
+        text-align: center;
         padding: 0.3rem 0.8rem;
         margin-left: -0.8rem;
         margin-top: 5px;
